--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "reactjs-popup": "^1.5.0",
     "uuidv4": "^6.1.0"
   },
   "scripts": {
