--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-media": "^1.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-toastify": "^6.0.5",
     "reactjs-popup": "^1.5.0",
     "uuidv4": "^6.1.0"
   },
