--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "email-validator": "^2.0.4",
     "enzyme-to-json": "^3.5.0",
+    "formik": "^2.1.4",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-burger-menu": "^2.6.14",
@@ -20,7 +22,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-toastify": "^6.0.5",
-    "reactjs-popup": "^1.5.0"
+    "reactjs-popup": "^1.5.0",
+    "yup": "^0.29.1"
   },
   "scripts": {
     "start": "react-scripts start",
